Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2096

Traffic server does not error on loading bad ssl cert

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.3.4
    • 4.1.2
    • SSL
    • None

    Description

      In traffic server 3.3.4 when loading an SSL cert from ssl_multicert.config if the ssl cert is invalid or missing an error is not logged.

      Eg: dest_ip=10.0.0.1 ssl_cert_name=asdf ssl_ca_name=asdf-chain

      If asdf-chain is an empty file or doesn't exist the ssl cert will not get loaded - but no error will be logged.

      Attachments

        Activity

          People

            jamespeach James Peach
            klindgren Kris Lindgren
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: