TS-2096: improve SSL certificate loading error messages

We were passing a format string to SSLDiagnostic(), but never
actually using it when we logged the error. Improve the
ssl_multicert.config error logging so that we log the file and line
of where we detected an error.